--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Markscat_prj01_V25_09_21</name>
+	<name>M-STM32F407</name>
 	<comment></comment>
 	<projects>
 	</projects>
