--- a/Debug/makefile
+++ b/Debug/makefile
@@ -36,34 +36,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := Markscat_prj01_V25_09_21
+BUILD_ARTIFACT_NAME := M-STM32F407
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-Markscat_prj01_V25_09_21.elf \
+M-STM32F407.elf \
 
 MAP_FILES += \
-Markscat_prj01_V25_09_21.map \
+M-STM32F407.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-Markscat_prj01_V25_09_21.list \
+M-STM32F407.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: Markscat_prj01_V25_09_21.elf secondary-outputs
+main-build: M-STM32F407.elf secondary-outputs
 
 # Tool invocations
-Markscat_prj01_V25_09_21.elf Markscat_prj01_V25_09_21.map: $(OBJS) $(USER_OBJS) C:\Ethan\workshop\mcu\STM32-2\Markscat_prj01_git\M-STM32F407\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Markscat_prj01_V25_09_21.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Ethan\workshop\mcu\STM32-2\Markscat_prj01_git\M-STM32F407\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Markscat_prj01_V25_09_21.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+M-STM32F407.elf M-STM32F407.map: $(OBJS) $(USER_OBJS) C:\Ethan\workshop\mcu\STM32-2\Markscat_prj01_git\M-STM32F407\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "M-STM32F407.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Ethan\workshop\mcu\STM32-2\Markscat_prj01_git\M-STM32F407\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="M-STM32F407.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -72,14 +72,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-Markscat_prj01_V25_09_21.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "Markscat_prj01_V25_09_21.list"
+M-STM32F407.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "M-STM32F407.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) Markscat_prj01_V25_09_21.elf Markscat_prj01_V25_09_21.list Markscat_prj01_V25_09_21.map default.size.stdout
+	-$(RM) M-STM32F407.elf M-STM32F407.list M-STM32F407.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
